// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsFeatures displays listing details features section when rental listing 1`] = `
<li
  className="responsive-content-item "
>
  <header
    className="detail-header"
  >
    <img
      alt=""
      className="detail-header__image "
      src="listing-features.svg"
    />
    <hgroup
      className="detail-header__hgroup"
    >
      <h2
        className="detail-header__title"
      >
        Features
      </h2>
      <span
        className="detail-header__subtitle"
      >
        Amenities, unit details and additional fees
      </span>
      <span
        className="ui-icon ui-medium"
        data-test-id={null}
      >
        <svg
          fill="currentColor"
          viewBox="0 0 32 32"
        >
          <path
            d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
          />
        </svg>
      </span>
    </hgroup>
  </header>
  <div
    className="listing-detail-panel"
  >
    <dl
      className="column-definition-list"
    >
      <dd
        className="description__title"
      >
        Neighborhood
      </dd>
      <dt
        className="description__body"
      >
        <span>
          Hayes Valley
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Built
      </dd>
      <dt
        className="description__body"
      >
        <span>
          2009
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Smoking Policy
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          Non-smoking building
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Pets Policy
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          Dogs are not allowed in the building.
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Property Amenities
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          Laundry room, underground parking, courtyard, bike room
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Accessibility
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          Elevator to all floors
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Unit Features
      </dd>
      <dt
        className="description__body"
      >
        
      </dt>
    </dl>
    <div
      className="info-card bg-gray-100 border-0"
    >
      <div
        className="info-card__header"
      >
        <h3
          className="info-card__title"
        >
          Additional Fees
        </h3>
      </div>
      <section
        className="grid-section"
      >
        <div
          className="grid-section__inner md:grid md:grid-cols-2 md:gap-8 mb-5"
        >
          <article
            aria-label=""
            className="grid-item"
          >
            <div
              className="text-base"
            >
              Deposit
            </div>
            <div
              className="text-xl font-bold"
            >
              $2,102 - $2,355
            </div>
            <div
              className="text-sm"
            >
              or one month's rent
            </div>
            <div
              className="text-sm"
            >
              May be higher for lower credit scores
            </div>
          </article>
        </div>
      </section>
      <div
        className="info-card__columns text-xs"
      >
        <div
          className="info-card__column-2"
        >
          <p
            className="translate"
          >
            Tenants pay for gas, electricity.

For pet fees:  Cat is allowed with a $500 refundable deposit, $250 non-refundable cleaning fee and a pet addendum.  

Dogs are not allowed in the building.  

One parking space per unit available for $175 a month.
          </p>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`ListingDetailsFeatures displays listing details features section when sales listing 1`] = `
<li
  className="responsive-content-item "
>
  <header
    className="detail-header"
  >
    <img
      alt=""
      className="detail-header__image "
      src="listing-features.svg"
    />
    <hgroup
      className="detail-header__hgroup"
    >
      <h2
        className="detail-header__title"
      >
        Features
      </h2>
      <span
        className="detail-header__subtitle"
      >
        Amenities and unit details
      </span>
      <span
        className="ui-icon ui-medium"
        data-test-id={null}
      >
        <svg
          fill="currentColor"
          viewBox="0 0 32 32"
        >
          <path
            d="M28.267 6.133l-12.267 12.267-12.267-12.267-3.733 3.733 16 16 16-16z"
          />
        </svg>
      </span>
    </hgroup>
  </header>
  <div
    className="listing-detail-panel"
  >
    <dl
      className="column-definition-list"
    >
      <dd
        className="description__title"
      >
        Neighborhood
      </dd>
      <dt
        className="description__body"
      >
        <span>
          Tenderloin
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Built
      </dd>
      <dt
        className="description__body"
      >
        <span>
          2018
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Appliances
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          Landing at The San Francisco Shipyard: Refrigerator: Bosch Stainless Steel Refrigerator Bosch - 300 Series Compact Washer and Condensation Dryer Bosch Stainless Steel Slide In Gas Range with Hood Bosch Stainless Steel Dishwasher Honeywell Thermostat
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Services Covered by HOA Dues
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          Test Service
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Parking
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          Landing at The San Francisco Shipyard:

          <br />
          <br />
          One parking space is included in the sale price of each unit. The parking space will be resold with the unit within the maximum resale price.

          <br />
          <br />
          <br />
          <br />
          Palisades at The San Francisco Shipyard:

          <br />
          <br />
          Two bay parking spaces in attached garage are included in the sale price of each unit. The parking space will be resold with the unit within the maximum resale price.
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Smoking Policy
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          Smoking may cause problems
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Pets Policy
      </dd>
      <dt
        className="description__body translate"
      >
        <span>
          All pets are awesome!
        </span>
      </dt>
      <dd
        className="description__title"
      >
        Unit Features
      </dd>
      <dt
        className="description__body"
      >
        
      </dt>
    </dl>
  </div>
</li>
`;
